--- a/styles.css
+++ b/styles.css
@@ -207,6 +207,10 @@ body {
     padding: var(--box-padding-big);
   }
 
+  .subscribe-fee {
+    justify-content: flex-start;
+  }
+
   .why-us {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
