--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,6 @@
 
 :root {
 
-  /* FONTS */
-
-  --ff-main: 'Karla', sans-serif;
-
   /* COLORS */
 
   /* PRIMARY COLORS */
@@ -17,6 +13,10 @@
 
   --clr-neutral-gray: hsl(204, 43%, 93%);
   --clr-neutral-grayblue: hsl(218, 22%, 67%);
+
+    /* FONTS */
+
+    --ff-main: 'Karla', sans-serif;
 
   /* PADDING */
 
@@ -40,17 +40,19 @@ body {
 }
 
 .container {
+  border-radius: 5px;
+  box-shadow: 0 .6em .6em -0.4em lightgrey;
   display: grid;
-  width: 90%;
   margin-block: 4rem;
-  box-shadow: 0 .6em .6em -.4em lightgrey;
+  margin-inline: 1.5rem;
+  max-width: 500px;
+  overflow: hidden;
 }
 
 /* HERO SECTION */
 
 .hero {
   background-color: white;
-  border-radius: 5px 5px 0 0;
   padding: var(--box-padding);
 }
 
@@ -60,11 +62,11 @@ body {
   padding-block-end: 1.3em;
 }
 
-.hero__title__small {
+.hero__title-small {
   color: var(--clr-primary-yellow);
   font-size: 1.07rem;
-  padding-block-end: 1em;
   line-height: 1.3;
+  padding-block-end: 1em;
 }
 
 .hero__body {
@@ -109,21 +111,17 @@ body {
 }
 
 .subscribe__button {
-  font-family: var(--ff-main);
-  font-size: 1.125rem;
+  all: unset;
   background-color: var(--clr-primary-yellow);
-  color: white;
-  text-decoration: none;
-  display: inline-block;
-  width: 100%;
-  text-align: center;
-  padding: .9em;
-  border: 0;
-  border-radius: 5px;
-  margin-block-start: 2em;
   box-shadow: 0 .5em .5em -.3em darkcyan;
   cursor: pointer;
+  display: inline-block;
+  font-size: 1.125rem;
+  margin-block-start: 2em;
+  padding: .9em;
+  text-align: center;
   transition: all .2s ease;
+  width: 90%;
 }
 
 .subscribe__button:hover {
@@ -131,14 +129,12 @@ body {
   transform: translateY(-0.15em);
 }
 
-
 /* WHY US SECTION */
 
 .why-us {
   background-color: hsla(179, 62%, 43%, 0.8);
   color: white;
   padding: var(--box-padding);
-  border-radius: 0 0 5px 5px;
 }
 
 .why-us__title {
@@ -177,15 +173,13 @@ body {
   .container {
     grid-template-columns: auto auto;
     grid-template-rows: auto auto;
-    width: 50%;
-    min-width: 600px;
+    max-width: 750px;
   }
 
   .hero {
     grid-column: 1 / 3;
     grid-row: 1 / 2;
     text-align: left;
-    border-radius: 8px 8px 0 0;
     padding: var(--box-padding-big);
   }
 
@@ -194,7 +188,7 @@ body {
     padding-block-end: 1em;
   }
 
-  .hero__title__small {
+  .hero__title-small {
     font-size: 1.25rem;
     padding-block-end: .6em;
   }
@@ -208,7 +202,6 @@ body {
     grid-column: 1 / 2;
     grid-row: 2 /3;
     text-align: left;
-    border-radius: 0 0 0 8px;
     padding: var(--box-padding-big);
   }
 
@@ -219,15 +212,7 @@ body {
   .why-us {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
-    border-radius: 0 0 8px 0;
     padding: var(--box-padding-big);
   }
 
-}
-
-@media screen and (min-width: 1800px) {
-
-  .container {
-    width: 40%;
-  }
 }
